# parametric-curves

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md
include/parametric-curves/: CMakeLists.txt  MathDefs.h  abstract-curve.hpp  bernstein.h  bezier_curve.h  constant.hpp  curve-constraint.hpp  infinite-const-acc.hpp  infinite-sinusoid.hpp  linear-chirp.hpp  minimum-jerk.hpp  polynomial.hpp  spline.hpp  text-file.hpp
include/parametric-curves/helpers/: effector_spline.h  effector_spline_rotation.h
include/parametric-curves/optimization/: OptimizeSpline.h
include/parametric-curves/serialization/: archive.hpp  eigen-matrix.hpp
include/parametric-curves/spatial/: force-curve.hpp
include/parametric-curves/utils/: file-io.hpp
include/parametriccurves/: MathDefs.h  abstract-curve.hpp  constant.hpp  curve-constraint.hpp  curve_abc.h  infinite-const-acc.hpp  infinite-sinusoid.hpp  linear-chirp.hpp  minimum-jerk.hpp  polynomial.hpp  spline.hpp  text-file.hpp
include/parametriccurves/serialization/: archive.hpp  eigen-matrix.hpp
include/parametriccurves/spatial/: force-curve.hpp
include/parametriccurves/splines/: cubic-spline.hpp  cubic_spline.h  exact_cubic.h  polynom.h  polynomial.hpp  quintic-spline.hpp  quintic_spline.h
include/parametriccurves/utils/: file-io.hpp
python/: CMakeLists.txt  __init__.py  spline_python.cpp
python/test/: quick.py  test.py
src/tests/spline_test/: CMakeLists.txt  Main.cpp
tests/: CMakeLists.txt  Main.cpp
tests/python/: CMakeLists.txt  quick.py  test.py
travis_custom/: custom_before_install  custom_build
