ADD_LIBRARY(${PYWRAP} SHARED spline_python.cpp)
TARGET_LINK_LIBRARIES(${PYWRAP} eigenpy::eigenpy Boost::serialization)
TARGET_LINK_BOOST_PYTHON(${PYWRAP})

SET_TARGET_PROPERTIES(${PYWRAP} PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY ${PY_NAME})

IF(APPLE)
  # We need to change the extension for python bindings
  SET_TARGET_PROPERTIES(${PYWRAP} PROPERTIES SUFFIX ".so")
ENDIF(APPLE)

INSTALL(TARGETS ${PYWRAP} DESTINATION "${PYTHON_SITELIB}/${PY_NAME}")

PYTHON_INSTALL_ON_SITE(${PY_NAME} "__init__.py")
